--- a/Shop2/Shop2.csproj
+++ b/Shop2/Shop2.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DNTPersianUtils.Core" Version="6.6.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.design" Version="8.0.12"/>
