--- a/Shop2/Shop2.csproj
+++ b/Shop2/Shop2.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DNTPersianUtils.Core" Version="6.6.0" />
+      <PackageReference Include="DNTPersianUtils.Core" Version="6.5.0" />
+      <PackageReference Include="Mapster" Version="7.4.2-pre02" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.13" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.design" Version="8.0.12"/>
@@ -15,6 +17,10 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="Views\Data\Index.cshtml" />
     </ItemGroup>
 
 </Project>
